BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Clinical_Trial__c.object
<CustomObject>
    <description>Clinical Trials data sourced by users or a third party</description>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Account__r.Account_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Source_Country_BMS_CORE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Link to the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Trials</relationshipLabel>
        <relationshipName>Clinical_Trial</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMS_Clinical_trial_BMS_CN__c</fullName>
        <defaultValue>&quot;http://www.clinicaltrials.gov&quot;</defaultValue>
        <description>BMS_CHINA__c
http://www.clinicaltrials.gov</description>
        <label>BMS Clinical trial</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the trial</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the trial</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>The date that the clinical trial ended or is estimated to end</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_vod__c</fullName>
        <description>URL field that links to external Clinical Trials, e.g ClinicalTrials.gov</description>
        <label>ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Medicine_Product_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Clinical Trial Medicine or Product
Lookup to the product detailed in the Product Catalog.</description>
        <label>Medicine or Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Clinical Trials</relationshipLabel>
        <relationshipName>Clinical_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>Picklist of trial phases</description>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Phase I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position_BMS_CN__c</fullName>
        <description>Clinical Trial Position</description>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Principal Investigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Investigator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Picklist of trial roles for the professional</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Principal Investigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Co-Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <description>The sponsor of the trial</description>
        <label>Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>The date that the clinical trial began.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist of trial statuses</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Not Yet Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporarily Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trial_Name_BMS_CN__c</fullName>
        <description>Triall_Name_BMS_China</description>
        <label>Trial Name</label>
        <type>TextArea</type>
    </fields>
    <label>Clinical Trial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Phase__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Protocol Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Trials</pluralLabel>
    <recordTypes>
        <fullName>BMS_CHINA_MED_Clinical_Trial</fullName>
        <active>true</active>
        <description>BMS China Medical Team related Clinical Trial</description>
        <label>BMS-CHINA-MED-Clinical Trial</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>